<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <FrameLayout
        android:id="@+id/key_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/close" />

    <Button
        android:id="@+id/add_key"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_key" />

    <Button
        android:id="@+id/save"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:text="@string/save" />

</FrameLayout>