<?xml version="1.0" encoding="utf-8"?>
<cn.gavinliu.open.gamepad.helper.widget.ManagerPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <FrameLayout
        android:id="@+id/key_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/close" />

        <Button
            android:id="@+id/add_key"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_key" />

        <Button
            android:id="@+id/save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:text="@string/save" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/keyboard_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <GridView
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:choiceMode="multipleChoice"
            android:horizontalSpacing="4dp"
            android:stretchMode="columnWidth" />

        <GridView
            android:id="@+id/grid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:choiceMode="multipleChoice"
            android:horizontalSpacing="4dp" />

        <GridView
            android:id="@+id/grid3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="4dp"
            android:choiceMode="multipleChoice"
            android:horizontalSpacing="4dp"
            android:stretchMode="columnWidth" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</cn.gavinliu.open.gamepad.helper.widget.ManagerPanelLayout>